<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/rameyon"
        android:text="@string/title"
        android:textColor="@color/green_accent"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_number"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:hint="@string/number_hint"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="italic|normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_number"
        tools:text="Ola Mundo" />

    <Button
        android:id="@+id/btn_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#63AF08"
        android:text="@string/number_generator"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result" />


    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#63AF08"
        android:text="@string/number_generator2"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_result2" />

    <TextView
        android:id="@+id/txt_result2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_generate"
        tools:text="Ola Mundo2" />

    <ImageView
        android:id="@+id/image_luck2"
        android:layout_width="51dp"
        android:layout_height="107dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trevo" />

    <ImageView
        android:id="@+id/image_luck3"
        android:layout_width="51dp"
        android:layout_height="107dp"
        android:layout_marginStart="32dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trevo" />

    <TextView
        android:id="@+id/txt_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/developed"
        android:textColor="@color/white"
        android:textStyle="italic|normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_trevo"
            android:layout_width="116dp"
            android:layout_height="188dp"
            android:layout_gravity="start|bottom"
            app:srcCompat="@drawable/trevo" />

        <ImageView
            android:id="@+id/img_trevo2"
            android:layout_width="187dp"
            android:layout_height="271dp"
            android:layout_alignTop="@id/img_trevo"
            android:layout_gravity="center|bottom"
            app:srcCompat="@drawable/trevo" />

        <ImageView
            android:id="@+id/img_trevo3"
            android:layout_width="116dp"
            android:layout_height="188dp"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="100dp"
            app:srcCompat="@drawable/trevo" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>